--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^4.15.2
   firebase_core: ^2.24.2
   country_picker: ^2.0.23
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
