--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   webview_flutter_android: ^3.12.1
   webview_flutter_wkwebview: ^3.9.4
   device_preview: ^1.1.0
-  otp_text_field: ^1.1.3
+  dependencies:
+  flutter_otp_text_field: ^1.1.3+2
   firebase_auth: ^4.15.2
   firebase_core: ^2.24.2
   country_picker: ^2.0.23
