--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.5.0
+  flutter_osm_plugin: ^1.0.5
   flutter_polyline_points: ^2.0.0
   geolocator: ^7.0.3
   geocoding: ^2.0.0
@@ -37,7 +38,6 @@ dependencies:
   webview_flutter_android: ^3.12.1
   webview_flutter_wkwebview: ^3.9.4
   device_preview: ^1.1.0
-  dependencies:
   flutter_otp_text_field: ^1.1.3+2
   firebase_auth: ^4.15.2
   firebase_core: ^2.24.2
